--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -11,8 +11,9 @@
                     </div>
                     <div class="card-body">
                         <form action="{% url 'login' %}" method="POST">
+                            {% csrf_token %}
                             <div class="form-group">
-                                <label for="username">Username</label>
+                                <label for="username">Username/Email</label>
                                 <input type="text" name="username" class="form-control" required>
                             </div>
                             <div class="form-group">
