--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -12,6 +12,7 @@
                     </div>
                     <div class="card-body">
                         <form action="{% url 'register' %}" method="POST">
+                            {% csrf_token %}
                             <div class="form-group">
                                 <label for="first_name">First Name</label>
                                 <input type="text" name="first_name" class="form-control" required>
@@ -19,10 +20,6 @@
                             <div class="form-group">
                                 <label for="last_name">Last Name</label>
                                 <input type="text" name="last_name" class="form-control" required>
-                            </div>
-                            <div class="form-group">
-                                <label for="username">Username</label>
-                                <input type="text" name="username" class="form-control" required>
                             </div>
                             <div class="form-group">
                                 <label for="email">Email</label>
