--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,8 @@
     <script src="{% static 'js/popper.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
     <script src="{% static 'js/main.js' %}"></script>
+    {% block extra_js %}
+    {% endblock %}
 
 </body>
 
