--- a/templates/myfiles/files.html
+++ b/templates/myfiles/files.html
@@ -1,19 +1,178 @@
 {% extends 'base.html' %}
 
+{% load static %}
+
 {% block content %}
 
-<h1>My Files</h1>
-
-<div class="container">
-    <ul>
-        {% for folder in folders %}
-        <li><a href="#">{{ folder.name }}</a></li>
-        {% endfor %}
-
-        {% for file in files %}
-        <li><a href="#">{{ file.name }}</a></li>
-        {% endfor %}
-    </ul>
+<!-- Header & Upload -->
+<div class="container-fluid">
+    <div class="row">
+        <h2>My Files</h2>
+        <div class="ml-4">
+            <form id="upload-form">
+                <!-- Check django documentation for what files should be uploaded-->
+                <label for="file-upload" class="btn" id="upload-btn">
+                    <i class="fas fa-upload"></i> Upload Files
+                </label>
+                <input id="file-upload" type="file" />
+            </form>
+        </div>
+    </div>
 </div>
 
+<!-- Breadcrumb -->
+<section id="bc" class="mt-3">
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item">
+                <a href="#">
+                    <i class="fas fa-home"></i> All Files</a>
+            </li>
+            <li class="breadcrumb-item">
+                <a href="#"> Some Folder</a>
+            </li>
+            <li class="breadcrumb-item active"> The current Folder</li>
+        </ol>
+    </nav>
+</section>
+
+<!-- File/Folder Controls-Buttonbar -->
+<div class="file-controls mb-3">
+    <div class="btn-group" role="group" aria-label="Basic example">
+        <button type="button" class="btn" data-toggle="modal" data-target="#createFolderModel">+ Folder</button>
+        <button type="button" class="btn">Download File</button>
+    </div>
+</div>
+
+<!-- Folder Creation Modal -->
+<!-- Form : folder-create-form -->
+<!-- Submit method overwritten in myfiles.js -->
+<div class="modal fade" id="createFolderModel" tabindex="-1" role="dialog" aria-labelledby="createFolderModelTitle"
+    aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <form class="modal-content" id="folder-create-form" method="POST">
+            {% csrf_token %}
+            <div class="modal-header">
+                <h5 class="modal-title" id="createFolderModelLongTitle">Create New Folder</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body text-center">
+                <input type="hidden" name="current_folder_id" value="{{ current.id }}">
+                <input type="text" placeholder="Folder Name" name="folder_name">
+                <input type="submit" class="btn btn-primary" value="Create Folder">
+            </div>
+        </form>
+    </div>
+</div>
+
+
+<table class="table table-hover file-view">
+    <thead>
+        <tr>
+            <th scope="col">Name</th>
+            <th scope="col">Type</th>
+            <th scope="col">Owner</th>
+            <th scope="col">Date Created</th>
+            <th scope="col">Size</th>
+            <th scope="col">
+                <!--Actions Column -->
+            </th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>
+                <a href="index.html">
+                    <i class="fas fa-folder"></i>
+                    Work Folder</a>
+            </td>
+            <td>folder</td>
+            <td>me</td>
+            <td>2019-08-5</td>
+            <td>-</td>
+            <td> <i class="fas fa-ellipsis-v"></i></td>
+        </tr>
+        <tr>
+            <td>
+                <a href="index.html">
+                    <i class="fas fa-folder"></i>
+                    Work Folder</a>
+            </td>
+            <td>folder</td>
+            <td>me</td>
+            <td>2019-08-5</td>
+            <td>-</td>
+            <td> <i class="fas fa-ellipsis-v"></i></td>
+        </tr>
+        <tr>
+            <td>
+                <a href="index.html">
+                    <i class="fas fa-folder"></i>
+                    Work Folder</a>
+            </td>
+            <td>folder</td>
+            <td>me</td>
+            <td>2019-08-5</td>
+            <td>-</td>
+            <td> <i class="fas fa-ellipsis-v"></i></td>
+        </tr>
+        <tr>
+            <td>
+                <a href="index.html">
+                    <i class="fas fa-folder"></i>
+                    Work Folder</a>
+            </td>
+            <td>folder</td>
+            <td>me</td>
+            <td>2019-08-5</td>
+            <td>-</td>
+            <td> <i class="fas fa-ellipsis-v"></i></td>
+        </tr>
+        <tr>
+            <td>
+                <a href="index.html">
+                    <i class="fas fa-folder"></i>
+                    Work Folder</a>
+            </td>
+            <td>folder</td>
+            <td>me</td>
+            <td>2019-08-5</td>
+            <td>-</td>
+            <td> <i class="fas fa-ellipsis-v"></i></td>
+        </tr>
+        <tr>
+            <td>
+                <a href="index.html">
+                    <i class="fas fa-folder"></i>
+                    Work Folder</a>
+            </td>
+            <td>folder</td>
+            <td>me</td>
+            <td>2019-08-5</td>
+            <td>-</td>
+            <td> <i class="fas fa-ellipsis-v"></i></td>
+        </tr>
+
+        <!-- FILES -->
+        <tr>
+            <td>
+                <a href="index.html">
+                    <i class="fas fa-file"></i>
+                    Final Design</a>
+            </td>
+            <td>png</td>
+            <td>me</td>
+            <td>2019-12-5</td>
+            <td>-</td>
+            <td> <i class="fas fa-ellipsis-v"></i></td>
+        </tr>
+    </tbody>
+</table>
+
+{% endblock %}
+
+{% block extra_js %}
+<script src="{% static 'js/myfiles.js' %}"></script>
 {% endblock %}
