--- a/templates/myfiles/files.html
+++ b/templates/myfiles/files.html
@@ -15,7 +15,7 @@
                 <input type="hidden" name="current_folder_id" value="{{ current.id }}">
                 <label for="file-upload" class="btn" id="upload-btn">
                     <i class="fas fa-upload"></i> Upload File
-                </label>                
+                </label>
                 <input id="file-upload" type="file" name="upload_file" />
             </form>
         </div>
@@ -27,13 +27,13 @@
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
             <li class="breadcrumb-item">
-                <a href="#">
+                <a href="{% url 'myfiles' %}">
                     <i class="fas fa-home"></i> All Files</a>
             </li>
             <li class="breadcrumb-item">
                 <a href="#"> Some Folder</a>
             </li>
-            <li class="breadcrumb-item active"> The current Folder</li>
+            <li class="breadcrumb-item active"> {{ current.name }}</li>
         </ol>
     </nav>
 </section>
@@ -52,7 +52,7 @@
 <div class="modal fade" id="createFolderModel" tabindex="-1" role="dialog" aria-labelledby="createFolderModelTitle"
     aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
-        <form class="modal-content" id="folder-create-form" method="POST">
+        <form class="modal-content" id="folder-create-form" method="POST" action="{% url 'create_folder' %}">
             {% csrf_token %}
             <div class="modal-header">
                 <h5 class="modal-title" id="createFolderModelLongTitle">Create New Folder</h5>
@@ -69,6 +69,28 @@
     </div>
 </div>
 
+<!-- Folder Rename Modal -->
+<!-- Form : folder-rename-form -->
+<!-- Submit method overwritten in myfiles.js -->
+<div class="modal fade" id="renameFolderModel" tabindex="-1" role="dialog" aria-labelledby="renameFolderModelTitle"
+    aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <form class="modal-content" id="folder-rename-form" method="POST" action="{% url 'rename_folder' %}">
+            {% csrf_token %}
+            <div class="modal-header">
+                <h5 class="modal-title" id="renameFolderModelLongTitle">Rename Folder</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body text-center">
+                <input type="hidden" name="id" id="rename-cur-folder-id">
+                <input type="text" placeholder="New Name" name="name">
+                <input type="submit" class="btn btn-primary" value="Rename Folder">
+            </div>
+        </form>
+    </div>
+</div>
 
 <table class="table table-hover file-view">
     <thead>
@@ -78,9 +100,7 @@
             <th scope="col">Owner</th>
             <th scope="col">Created</th>
             <th scope="col">Size</th>
-            <th scope="col">
-                <!--Actions Column -->
-            </th>
+            <th scope="col"></th>
         </tr>
     </thead>
     <tbody id="file-view-body">
@@ -88,15 +108,28 @@
         {% for folder in folders %}
         <tr>
             <td>
-                <a href="index.html">
+                <a href="{% url 'folders' folder.id %}">
                     <i class="fas fa-folder"></i>
-                    {{ folder.name }}</a>
+                    <span id="folder-{{ folder.id }}-name">{{ folder.name }}</span></a>
             </td>
             <td>folder</td>
             <td>{{ folder.owner_id }}</td>
             <td>{{ folder.date_created |timesince }} ago</td>
             <td>-</td>
-            <td> <i class="fas fa-ellipsis-v"></i></td>
+            <td>
+                <div class="dropleft">
+                    <button type="button" class="btn float-right" id="dropdownMenuButton" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false"><i class="fas fa-ellipsis-v"></i></button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        <a class="dropdown-item" href="#" onclick="renamePopup({{ folder.id }})">Rename Folder</a>
+                        <a class="dropdown-item" href="#">Delete Folder</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Share...</a>
+                        <a class="dropdown-item" href="#">Create Public Link</a>
+                        <a class="dropdown-item" href="#">Something</a>
+                    </div>
+                </div>
+            </td>
         </tr>
         {% endfor %}
 
@@ -112,7 +145,22 @@
             <td>{{ file.owner_id }}</td>
             <td>{{ file.date_created |timesince }} ago</td>
             <td>{{ file.file_source.size }}</td>
-            <td> <i class="fas fa-ellipsis-v"></i></td>
+            <td>
+                <div class="dropleft">
+                    <!-- <i class="fas fa-ellipsis-v" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
+                                aria-expanded="false"></i> -->
+                    <button type="button" class="btn float-right" id="dropdownMenuButton" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false"><i class="fas fa-ellipsis-v"></i></button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        <a class="dropdown-item" onclick="renamePopup({{ folder.id }})">Rename Folder</a>
+                        <a class="dropdown-item" onclick="delete_folder({{ folder.id }})">Delete Folder</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item">Share...</a>
+                        <a class="dropdown-item">Create Public Link</a>
+                        <a class="dropdown-item">Something</a>
+                    </div>
+                </div>
+            </td>
         </tr>
         {% endfor %}
 
