--- a/templates/partials/_sidebar.html
+++ b/templates/partials/_sidebar.html
@@ -14,9 +14,9 @@
     {% endif %}
     <div class="list-group list-group-flush">
         {% if user.is_authenticated %}
-        <a href="#" class="list-group-item selected">My Files</a>
+        <a href="{% url 'myfiles' %}" class="list-group-item {% if request.path == '/' %} selected {% endif %}">My Files</a>
         <a href="#" class="list-group-item">Shared Files</a>
-        <a href="#" class="list-group-item">Recycle Bin</a>
+        <a href="{% url 'recyclebin' %}" class="list-group-item {% if 'recyclebin' in request.path %} selected {% endif %}">Recycle Bin</a>
         <a href="#" class="list-group-item">Dashboard</a>
         <!-- Put logout inside the dashboard -->
         <a href="javascript:{document.getElementById('logout').submit()}" class="list-group-item">Logout</a>
