--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,7 @@
         <div id="page-content-wrapper">
             {% block content %}
             {% endblock %}
+            {% include 'partials/_alerts.html' %}
         </div>
     </div>
     <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
