--- a/templates/partials/_sidebar.html
+++ b/templates/partials/_sidebar.html
@@ -6,10 +6,9 @@
     <div class="container">
         <p class="user-name">{{ user.first_name }} {{ user.last_name }}</p>
         <div class="progress">
-            <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0"
-                aria-valuemax="100"></div>
+            <div class="progress-bar" id="quota-sidebar-progressbar" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
-        <p class="user-usage-info">25MB of 100MB used</p>
+        <p class="user-usage-info" id="quota-sidebar-info"></p>
     </div>
     {% endif %}
     <div class="list-group list-group-flush">
