--- a/templates/public/public.html
+++ b/templates/public/public.html
@@ -66,7 +66,7 @@
         {% for file in files %}
         <tr id="file-{{ file.id }}-row">
             <td>
-                <a href="index.html">
+                <a href="{% url 'download' file.id %}">
                     <i class="fas fa-file"></i>
                     <span id="file-{{ file.id }}-name">{{ file.name }}</span></a>
             </td>
