--- a/templates/myfiles/search.html
+++ b/templates/myfiles/search.html
@@ -8,83 +8,27 @@
 <div class="container-fluid">
     <div class="row">
         <h2>My Files</h2>
-        <div class="ml-4">
-            <!-- Form gets auto submitted when uploaded. Check myfiles.js -->
-            <form id="upload-form" action="{% url 'upload_file' %}" enctype="multipart/form-data" method="POST">
-                {% csrf_token %}
-                <input type="hidden" name="current_folder_id" value="{{ current.id }}">
-                <label for="file-upload" class="btn" id="upload-btn">
-                    <i class="fas fa-upload"></i> Upload File
-                </label>
-                <input id="file-upload" type="file" name="upload_file" />
-            </form>
-        </div>
     </div>
 </div>
 
-<!-- Breadcrumb -->
-<section id="bc" class="mt-3">
-    <nav aria-label="breadcrumb">
-        <ol class="breadcrumb">
-            <li class="breadcrumb-item">
-                <a href="{% url 'myfiles' %}" class="droppable" id="folder-{{ root.id }}">
-                    <i class="fas fa-home"></i> All Files</a>
-            </li>
-            {%  for crumb in breadcrumbs %}
-            {% if crumb.parent_folder %}
-            <li class="breadcrumb-item">
-                <a href="{% url 'folders' crumb.id %}" class="droppable" id="folder-{{ crumb.id }}"> {{ crumb.name }}
-                </a>
-            </li>
-            {% endif %}
-            {%  endfor %}
-            {% if current.parent_folder %}
-            <li class="breadcrumb-item active"> {{ current.name }}</li>
-            {% endif %}
-        </ol>
-    </nav>
-</section>
 
 <!-- File/Folder Controls-Buttonbar -->
-<div class="file-controls mb-3">
+<div class="file-controls m-3 container-fluid">
     <div class="btn-group" role="group" aria-label="Basic example">
         <form action="{% url 'search' %}" id="search-form">
-            <input class="form-control ml-2" type="search" placeholder="Search" aria-label="Search" name="query">
+            <input class="form-control" type="search" placeholder="Search" aria-label="Search" name="query" value="{{ query }}">
         </form>
-        <button type="button" class="btn mr-2" id="search-submit">Search</button>
-        <button type="button" class="btn" data-toggle="modal" data-target="#createFolderModel">+ Create Folder</button>
-        <!-- <button type="button" class="btn">Download File</button> -->
-        {% if current.parent_folder %}
-        <a type="button" class="btn" {% if current.parent_folder.parent_folder %}
-            href="{% url 'folders' current.parent_folder.id %}" {% else %} href="{% url 'myfiles'%}" {% endif %}><i
-                class=" fas fa-level-up-alt"></i>
-        </a>
-        {% endif %}
+        <button type="button" class="btn" id="search-submit">Search</button>
     </div>
 </div>
 
-<!-- Folder Creation Modal -->
-<!-- Form : folder-create-form -->
-<!-- Submit method overwritten in myfiles.js -->
-<div class="modal fade" id="createFolderModel" tabindex="-1" role="dialog" aria-labelledby="createFolderModelTitle"
-    aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-        <form class="modal-content" id="folder-create-form" method="POST" action="{% url 'create_folder' %}">
-            {% csrf_token %}
-            <div class="modal-header">
-                <h5 class="modal-title" id="createFolderModelLongTitle">Create New Folder</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body text-center">
-                <input type="hidden" name="current_folder_id" value="{{ current.id }}">
-                <input type="text" placeholder="Folder Name" name="folder_name">
-                <input type="submit" class="btn btn-primary" value="Create Folder">
-            </div>
-        </form>
-    </div>
+
+<div class="container-fluid m-3">
+    <p>
+        Showing search results for ''{{ query }}''
+    </p>
 </div>
+
 
 <!-- Folder Rename Modal -->
 <!-- Form : folder-rename-form -->
