--- a/templates/partials/_sidebar.html
+++ b/templates/partials/_sidebar.html
@@ -12,12 +12,12 @@
         <p class="user-usage-info" id="quota-sidebar-info"></p>
     </div>
     {% endif %}
-    <div class="list-group list-group-flush">
+    <div class="list-group list-group-flush" id="side-bar-items">
         {% if user.is_authenticated %}
         <a href="{% url 'myfiles' %}"
             class="list-group-item {% if request.path == '/' or 'folders' in request.path or 'search' in request.path %} selected {% endif %}">My
             Files</a>
-        <a href="#" class="list-group-item">Groups</a>
+
         <a href="#" class="list-group-item">Shared With Me</a>
         <a href="{% url 'recyclebin' %}"
             class="list-group-item {% if 'recyclebin' in request.path %} selected {% endif %}">Recycle Bin</a>
