SharedFolders implemented. (+ Share UI)

--- a/templates/base.html
+++ b/templates/base.html
@@ -30,6 +30,7 @@
     <script src="{% static 'js/popper.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
     <script src="{% static 'js/main.js' %}"></script>
+    <script src="{% static 'js/file_operations.js' %}"></script>
     {% block extra_js %}
     {% endblock %}
 
